<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agree">Пользовательское соглашение</string>

    <string name="link_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="link_mail">helenpupysheva@yandex.ru</string>
    <string name="message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="theme_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_text">Поделиться приложением через</string>
    <string name="link_course">https://practicum.yandex.ru/profile/android-developer-plus/</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="error_net">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_refresh">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="history_clear">Очистить историю</string>
    <string name="albumCover">Обложка песни</string>
    <string name="play_music">Проиграть песню</string>
    <string name="add_music">Добавить песню</string>
    <string name="like_music">Добавить в любимое</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>


    <string name="mediatecha">Медиатека</string>
    <string name="media_clean">Ваша медиатека пуста</string>
    <string name="media_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create">Создать</string>

    <string name="add_toplaylist">Добавить в плейлист</string>
    <string name="cancel">Отмена</string>
    <string name="areDone">Завершить создание плейлиста?</string>
    <string name="lostData">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>

    <string name="menu_edit">Редактировать</string>
    <string name="save">Сохранить</string>

    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>


</resources>