<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_background"
    android:orientation="vertical"
   >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/back"
        app:iconGravity="textStart"
        app:title="@string/settings"
        app:titleTextColor="@color/all_txt"
        />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/top_mar"
            android:paddingVertical="@dimen/pad_vertical"
            android:text="@string/dark_theme"
            android:textColor="@color/all_txt"
            android:textSize="@dimen/usual_text_size"
            android:paddingStart="@dimen/us_padSt"
            android:paddingEnd="@dimen/us_padEn"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/share"
            android:paddingVertical="@dimen/pad_vertical"
            android:text="@string/share"
            android:textColor="@color/all_txt"
            android:textSize="@dimen/usual_text_size"
            android:paddingStart="@dimen/us_padSt"
            android:paddingEnd="@dimen/us_padEn"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/support"
            android:paddingVertical="@dimen/pad_vertical"
            android:text="@string/support"
            android:textColor="@color/all_txt"
            android:textSize="@dimen/usual_text_size"
            android:paddingStart="@dimen/us_padSt"
            android:paddingEnd="@dimen/us_padEn"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/forward"
            android:paddingVertical="@dimen/pad_vertical"
            android:text="@string/user_agree"
            android:textColor="@color/all_txt"
            android:textSize="@dimen/usual_text_size"
            android:paddingStart="@dimen/us_padSt"
            android:paddingEnd="@dimen/us_padEn"/>

</LinearLayout>