<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.PlaylistMaker"
    tools:context=".SearchActivity"
    style="@style/ScreenParam">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:navigationIcon="@drawable/back"
        app:iconGravity="textStart"
        app:title="@string/search"
        app:fontFamily="@font/ys_display_medium"
        style="CustomToolbarTitleStyle"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:padding="@dimen/small_icon_pad"
        android:layout_height="@dimen/size_52dp">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/SearchBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36dp"
            android:autofillHints="no"
            android:contextClickable="true"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:lines="1"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="@dimen/size_14dp"
            android:layout_height="@dimen/size_14dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/pad_bottom"
            android:drawablePadding="@dimen/size_2dp"
            android:src="@drawable/clear_search"
            android:visibility="gone"
            />
    </FrameLayout>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="102dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/error_search" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/errorTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/nothing_found" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/errorNet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="102dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/error_net_light" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/errorNetTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_net" />

        <com.google.android.material.button.MaterialButton
            style="@style/errorNetButtonStyle"
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/error_refresh" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/us_padSt"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/track_list_view"
        android:visibility="gone" />


</LinearLayout>